--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -9,31 +9,86 @@
 <body>
     <!-- Contenu de la page -->
 
-    <a href="test1.html"> <img src="../images/logo.png" alt="logo"/> </a>
+    <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
     <h1> About <em>Robbie Lens</em> </h1>
-    <p>Photograph for over <mark>5 years</mark>, I realise coverages for your communication projects' dynamic and pertinent pictures.<br>
-         Créativity, quality, and serenity for YOU ! I manage <strong>everything</strong>, from artistic direction and coverage making, to delivering your ready to use pictures.
+    <p>Robbie Lens is a seasoned photographer with over 5 years of experience in capturing dynamic and pertinent images for various communication projects.<br>
+       With a keen eye for creativity and a commitment to quality, Robbie Lens ensures that every photograph not only meets but exceeds the client's expectations.
     </p>
 
     <h2 id="services"> Services </h2>
-    <ul>
-        <li> One person portrait </li>
-        <li> Multiple people portrait </li>
-        <li> Shooting mode </li>
-        <li> Customized refinement </li>
-        <li> Improving your pictures </li>
-    </ul>
+    <ol>
+        <li> <h3>Corporate Photography</h3> </li>
+            <ul>
+                <li><strong>Event Coverage:</strong></li>
+                <p>Professional coverage of corporate events, conferences, and seminars.</p>
+                <li><strong>Headshots:</strong></li>
+                <p>High-quality headshots for company profiles, LinkedIn, and other professional uses.</p>
+                <li><strong>Office Environment:</strong> </li>
+                <p>Capturing the essence of your workplace and team in action.</p>
+                <li><strong>Product Launches:</strong></li>
+                <p>Dynamic and engaging photos of product launch events and showcases.</p>
+            </ul>
+        <li><h3>Commercial Photography</h3></li>
+            <ul>
+                <li><strong>Product Photography:</strong> </li>
+                <p>Detailed and appealing photographs of products for catalogs, websites, and advertisements.</p>
+                <li><strong>Advertising Campaigns:</strong> </li>
+                <p>Creative visuals for print and digital advertising campaigns.</p>
+                <li><strong>Brand Storytelling:</strong></li>
+                <p>Photos that tell the story of your brand and its values.</p>
+                <li><strong>Fashion Shoots: </strong></li>
+                <p>High-end fashion photography for lookbooks, magazines, and online stores.</p>
+            </ul>
+        <li><h3>Portrait Photography</h3></li>
+            <ul>
+                <li><strong>Individual Portraits:</strong></li>
+                <p>Artistic and personal portraits that capture the essence of the subject.</p>
+                <li><strong>Family Portraits:</strong> </li>
+                <p>Heartwarming photos of families, capturing special moments and relationships.</p>
+                <li><strong>Senior Portraits:</strong></li>
+                <p>Memorable portraits for high school or college seniors.</p>
+                <li><strong>Maternity and Newborn:</strong> </li>
+                <p>Beautiful and intimate photos of maternity and newborn moments.</p>
+            </ul>
+        <li><h3>Event Photography</h3></li>
+            <ul>
+                <li><strong>Weddings:</strong></li>
+                <p>Comprehensive wedding coverage from engagement sessions to the big day.</p>
+                <li><strong>Parties and Celebrations: </strong> </li>
+                <p>Capturing the joy and excitement of birthday parties, anniversaries, and other celebrations.</p>
+                <li><strong>Cultural and Community Events:</strong></li>
+                <p> Documenting festivals, parades, and community gatherings.</p>
+            </ul>
+        <li><h3>Post-Production Services</h3></li>
+            <ul>
+                <li><strong>Photo Editing:</strong></li>
+                <p>Professional editing to enhance the quality and impact of photographs.</p>
+                <li><strong>Retouching:</strong> </li>
+                <p>Detailed retouching services to perfect images.</p>
+                <li><strong>Custom Printing: </strong></li>
+                <p> High-quality prints of photographs for personal or commercial use.</p>
+            </ul>
+    </ol>
     <h2 id="socials"> Socials </h2>
-        <ol>
+        <ul>
             <li>Twitter</li>
             <p><a href="https://twitter.com/" target="_blank"> <img src="../images/twitter.png"/> </a></p>
             <li>Instagram</li>
             <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/instagram.png"/> </a></p>
             <li>Facebook</li>
-            <p><a href="https://www.facebook.com/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png"/> </a></p>
-        </ol>
-    <a href="test1.html"> <img src="../images/logo.png" alt="logo"/> </a>
-
+            <p><a href="https://www.facebook.com/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Facebook%2BIcon%2BBlack.png"/> </a></p>
+        </ul>
+   
+    <h2 id="contact">Contact</h2>
+        <ul>
+            <li><strong>Email:</strong></li>
+            <p> robbielens@photo.com</p>
+            <li><strong>Phone:</strong></li>
+            <p>+123 4 56 78 90 </p>
+            <li><strong>Website:</strong></li>
+            <p><a href="home_page.html">www.robbielensphotography.com</a></p>
+        </ul>
+    <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
 </body>
 
 </html>
