--- a/home_page.html
+++ b/home_page.html
@@ -6,15 +6,19 @@
     </head>
     <body>
         <!-- we re gonna figure out what to put in the homepage body of the website -->
-
+        <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
+        <br>
         <img src="../images/robbie-lens.png" alt="picture of robbie lens"/>
         
-
         <ul>
-            <li>services</li>
-            <p><a href="a-propos.html#services" target="_blank"> services</a></p>
-            <li>socials</li>
-            <p><a href="a-propos.html#socials" target="_blank"> socials</a></p>
+            <li><strong>Services</strong></li>
+            <p><a href="about.html#services" target="_blank"> services</a></p>
+            <li><strong>Socials</strong></li>
+            <p><a href="about.html#socials" target="_blank"> socials</a></p>
+            <li><strong>Contact</strong></li>
+            <p><a href="about.html#contact" target="_blank"> contact</a></p>
         </ul>
+
+        <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
     </body>
 </html>
