--- a/home_page.html
+++ b/home_page.html
@@ -3,12 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title> Home - Rbbie Lens Photography </title>
+        <link href="style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playwrite+AR:wght@100..400&family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- we re gonna figure out what to put in the homepage body of the website -->
-        <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
+
+        <div class="div_top">
+            <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a><a href="about.html" >About</a>
+        </div>
+        <h1 class="photography">Photography</h1>
+        <p>Here is where <span>Passion</span> meets <span>Profession</span>!</p>
         <br>
-        <img src="../images/robbie-lens.png" alt="picture of robbie lens"/>
+        <img src="../images/robbie_lens.png" alt="picture of robbie lens"/>
         
         <ul>
             <li><strong>Services</strong></li>
@@ -19,6 +26,9 @@
             <p><a href="about.html#contact" target="_blank"> contact</a></p>
         </ul>
 
-        <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
+        <div class="div1">
+            <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
+        </div>
+        
     </body>
 </html>
