--- a/about.html
+++ b/about.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title> About - Robbie Lens Photography </title>
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- Contenu de la page -->
+    <div class="div_top">
+        <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/></a><a href="home_page.html" class="link"> Home </a>
+    </div>
 
-    <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
     <h1> About <em>Robbie Lens</em> </h1>
-    <p>Robbie Lens is a seasoned photographer with over 5 years of experience in capturing dynamic and pertinent images for various communication projects.<br>
-       With a keen eye for creativity and a commitment to quality, Robbie Lens ensures that every photograph not only meets but exceeds the client's expectations.
+    <p>Robbie Lens is a seasoned <em>photographer</em> with over 5 years of experience in capturing dynamic and pertinent images for various communication projects.<br>
+       With a keen eye for <em>creativity</em> and a <em>commitment to quality</em>, Robbie Lens ensures that every photograph not only meets but exceeds the client's expectations.
     </p>
 
     <h2 id="services"> Services </h2>
@@ -20,53 +24,53 @@
         <li> <h3>Corporate Photography</h3> </li>
             <ul>
                 <li><strong>Event Coverage:</strong></li>
-                <p>Professional coverage of corporate events, conferences, and seminars.</p>
+                <p class="details">Professional coverage of corporate events, conferences, and seminars.</p>
                 <li><strong>Headshots:</strong></li>
-                <p>High-quality headshots for company profiles, LinkedIn, and other professional uses.</p>
+                <p class="details">High-quality headshots for company profiles, LinkedIn, and other professional uses.</p>
                 <li><strong>Office Environment:</strong> </li>
-                <p>Capturing the essence of your workplace and team in action.</p>
+                <p class="details">Capturing the essence of your workplace and team in action.</p>
                 <li><strong>Product Launches:</strong></li>
-                <p>Dynamic and engaging photos of product launch events and showcases.</p>
+                <p class="details">Dynamic and engaging photos of product launch events and showcases.</p>
             </ul>
         <li><h3>Commercial Photography</h3></li>
             <ul>
                 <li><strong>Product Photography:</strong> </li>
-                <p>Detailed and appealing photographs of products for catalogs, websites, and advertisements.</p>
+                <p class="details">Detailed and appealing photographs of products for catalogs, websites, and advertisements.</p>
                 <li><strong>Advertising Campaigns:</strong> </li>
-                <p>Creative visuals for print and digital advertising campaigns.</p>
+                <p class="details">Creative visuals for print and digital advertising campaigns.</p>
                 <li><strong>Brand Storytelling:</strong></li>
-                <p>Photos that tell the story of your brand and its values.</p>
+                <p class="details">Photos that tell the story of your brand and its values.</p>
                 <li><strong>Fashion Shoots: </strong></li>
-                <p>High-end fashion photography for lookbooks, magazines, and online stores.</p>
+                <p class="details">High-end fashion photography for lookbooks, magazines, and online stores.</p>
             </ul>
         <li><h3>Portrait Photography</h3></li>
             <ul>
                 <li><strong>Individual Portraits:</strong></li>
-                <p>Artistic and personal portraits that capture the essence of the subject.</p>
+                <p class="details">Artistic and personal portraits that capture the essence of the subject.</p>
                 <li><strong>Family Portraits:</strong> </li>
-                <p>Heartwarming photos of families, capturing special moments and relationships.</p>
+                <p class="details">Heartwarming photos of families, capturing special moments and relationships.</p>
                 <li><strong>Senior Portraits:</strong></li>
-                <p>Memorable portraits for high school or college seniors.</p>
+                <p class="details">Memorable portraits for high school or college seniors.</p>
                 <li><strong>Maternity and Newborn:</strong> </li>
-                <p>Beautiful and intimate photos of maternity and newborn moments.</p>
+                <p class="details">Beautiful and intimate photos of maternity and newborn moments.</p>
             </ul>
         <li><h3>Event Photography</h3></li>
             <ul>
                 <li><strong>Weddings:</strong></li>
-                <p>Comprehensive wedding coverage from engagement sessions to the big day.</p>
+                <p class="details">Comprehensive wedding coverage from engagement sessions to the big day.</p>
                 <li><strong>Parties and Celebrations: </strong> </li>
-                <p>Capturing the joy and excitement of birthday parties, anniversaries, and other celebrations.</p>
+                <p class="details">Capturing the joy and excitement of birthday parties, anniversaries, and other celebrations.</p>
                 <li><strong>Cultural and Community Events:</strong></li>
-                <p> Documenting festivals, parades, and community gatherings.</p>
+                <p class="details"> Documenting festivals, parades, and community gatherings.</p>
             </ul>
         <li><h3>Post-Production Services</h3></li>
             <ul>
                 <li><strong>Photo Editing:</strong></li>
-                <p>Professional editing to enhance the quality and impact of photographs.</p>
+                <p class="details">Professional editing to enhance the quality and impact of photographs.</p>
                 <li><strong>Retouching:</strong> </li>
-                <p>Detailed retouching services to perfect images.</p>
+                <p class="details">Detailed retouching services to perfect images.</p>
                 <li><strong>Custom Printing: </strong></li>
-                <p> High-quality prints of photographs for personal or commercial use.</p>
+                <p class="details"> High-quality prints of photographs for personal or commercial use.</p>
             </ul>
     </ol>
     <h2 id="socials"> Socials </h2>
@@ -76,7 +80,7 @@
             <li>Instagram</li>
             <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/instagram.png"/> </a></p>
             <li>Facebook</li>
-            <p><a href="https://www.facebook.com/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Facebook%2BIcon%2BBlack.png"/> </a></p>
+            <p><a href="https://www.facebook.com/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Facebook%2BIcon%2BBlack.png" class="fb"/> </a></p>
         </ul>
    
     <h2 id="contact">Contact</h2>
@@ -86,9 +90,13 @@
             <li><strong>Phone:</strong></li>
             <p>+123 4 56 78 90 </p>
             <li><strong>Website:</strong></li>
-            <p><a href="home_page.html">www.robbielensphotography.com</a></p>
+            <p><a href="home_page.html" class="link">www.robbielensphotography.com</a></p>
         </ul>
-    <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
+
+    <div class="div_bott">
+        <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
+    </div>
+   
 </body>
 
 </html>
