--- a/home_page.html
+++ b/home_page.html
@@ -3,22 +3,32 @@
     <head>
         <meta charset="utf-8">
         <title> Home - Rbbie Lens Photography </title>
+        <link href="style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
     </head>
     <body>
         <!-- we re gonna figure out what to put in the homepage body of the website -->
-        <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
+
+        <div class="div_top">
+            <a href="home_page.html"><img src="../images/logo.png" alt="logo" id="logo"/></a><a href="about.html" class="link">About</a>
+        </div>
+        <h1 class="photography">Photography</h1>
+        <p>Here is where <em>Passion</em> meets <em>Profession</em>!</p>
         <br>
-        <img src="../images/robbie-lens.png" alt="picture of robbie lens"/>
+        <img src="../images/robbie_lens.png" alt="picture of robbie lens"/>
         
         <ul>
             <li><strong>Services</strong></li>
-            <p><a href="about.html#services" target="_blank"> services</a></p>
+            <p><a href="about.html#services" target="_blank" class="link"> services</a></p>
             <li><strong>Socials</strong></li>
-            <p><a href="about.html#socials" target="_blank"> socials</a></p>
+            <p><a href="about.html#socials" target="_blank" class="link"> socials</a></p>
             <li><strong>Contact</strong></li>
-            <p><a href="about.html#contact" target="_blank"> contact</a></p>
+            <p><a href="about.html#contact" target="_blank" class="link"> contact</a></p>
         </ul>
 
-        <a href="home_page.html"> <img src="../images/logo.png" alt="logo"/> </a>
+        <div class="div1">
+            <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
+        </div>
+        
     </body>
 </html>
