--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Contenu de la page -->
     <div class="div_top">
-        <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/></a><a href="home_page.html" class="link"> Home </a>
+        <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/></a><a href="home_page.html"> Home </a>
     </div>
 
     <h1> About <em>Robbie Lens</em> </h1>
@@ -76,11 +76,11 @@
     <h2 id="socials"> Socials </h2>
         <ul>
             <li>Twitter</li>
-            <p><a href="https://twitter.com/" target="_blank"> <img src="../images/twitter.png"/> </a></p>
+            <p><a href="https://twitter.com/" target="_blank"> <img src="https://cdn.prod.website-files.com/5d66bdc65e51a0d114d15891/64cebe1d31f50e161e4c825a_X-logo-transparent-white-twitter.png" class="png"/></a></p>
             <li>Instagram</li>
-            <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/instagram.png"/> </a></p>
+            <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/ig.png"/ class="png"></a></p>
             <li>Facebook</li>
-            <p><a href="https://www.facebook.com/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Facebook%2BIcon%2BBlack.png" class="fb"/> </a></p>
+            <p><a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbw.png" class="png"/></a></p>
         </ul>
    
     <h2 id="contact">Contact</h2>
@@ -93,8 +93,14 @@
             <p><a href="home_page.html" class="link">www.robbielensphotography.com</a></p>
         </ul>
 
+    <div >
+        <a href="" class="port">CHECK OUT MY PORTFOLIO</a>
+    </div>
     <div class="div_bott">
         <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
+        <a href="https://www.instagram.com/" target="_blank"> <img src="../images/igb.png" class="png"/></a>
+        <a href="https://twitter.com/" target="_blank"> <img src="https://lh3.googleusercontent.com/proxy/O27nkevdnR3yIvEJ1RD5M_26eiaoW6JuCH3iI1xAKRoExPVdleQyQ1elYXai1QqbMDd5bS4op8l4jdiTxd7ypMiQVb_Ug5qWpGEGrJsg61WtdA1IZuin79WMgjwmf6a9TFSP" class="png"/></a>
+        <a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbb.png" class="png"/></a>
     </div>
    
 </body>
