--- a/home_page.html
+++ b/home_page.html
@@ -10,12 +10,12 @@
         <!-- we re gonna figure out what to put in the homepage body of the website -->
 
         <div class="div_top">
-            <a href="home_page.html"><img src="../images/logo.png" alt="logo" id="logo"/></a><a href="about.html" class="link">About</a>
+            <a href="home_page.html"><img src="../images/logo.png" alt="logo" id="logo"/></a><a href="about.html">About</a>
         </div>
         <h1 class="photography">Photography</h1>
         <p>Here is where <em>Passion</em> meets <em>Profession</em>!</p>
         <br>
-        <img src="../images/robbie_lens.png" alt="picture of robbie lens"/>
+        <img src="../images/robbie_lens.png" alt="picture of robbie lens" class="RL"/>
         
         <ul>
             <li><strong>Services</strong></li>
@@ -26,8 +26,14 @@
             <p><a href="about.html#contact" target="_blank" class="link"> contact</a></p>
         </ul>
 
-        <div class="div1">
+        <div>
+            <a href="" class="port">A PROJECT? DM ME</a>
+        </div>
+        <div class="div_bott">
             <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
+            <a href="https://www.instagram.com/" target="_blank"> <img src="../images/igb.png" class="png"/></a>
+            <a href="https://twitter.com/" target="_blank"> <img src="https://lh3.googleusercontent.com/proxy/O27nkevdnR3yIvEJ1RD5M_26eiaoW6JuCH3iI1xAKRoExPVdleQyQ1elYXai1QqbMDd5bS4op8l4jdiTxd7ypMiQVb_Ug5qWpGEGrJsg61WtdA1IZuin79WMgjwmf6a9TFSP" class="png"/></a>
+            <a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbb.png" class="png"/></a>
         </div>
         
     </body>
