--- a/test/about.html
+++ b/test/about.html
@@ -10,98 +10,142 @@
 
 <body>
     <!-- Contenu de la page -->
-    <div class="div_top">
-        <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/></a><a href="home_page.html"> Home </a>
-    </div>
+    <header>
+        <div class="div_top">
+            <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/></a><a href="home_page.html"> Home </a>
+        </div>
+    </header>  
 
-    <h1> About <em>Robbie Lens</em> </h1>
-    <p>Robbie Lens is a seasoned <em>photographer</em> with over 5 years of experience in capturing dynamic and pertinent images for various communication projects.<br>
-       With a keen eye for <em>creativity</em> and a <em>commitment to quality</em>, Robbie Lens ensures that every photograph not only meets but exceeds the client's expectations.
-    </p>
+    <main>
 
-    <h2 id="services"> Services </h2>
-    <ol>
-        <li> <h3>Corporate Photography</h3> </li>
-            <ul>
-                <li><strong>Event Coverage:</strong></li>
-                <p class="details">Professional coverage of corporate events, conferences, and seminars.</p>
-                <li><strong>Headshots:</strong></li>
-                <p class="details">High-quality headshots for company profiles, LinkedIn, and other professional uses.</p>
-                <li><strong>Office Environment:</strong> </li>
-                <p class="details">Capturing the essence of your workplace and team in action.</p>
-                <li><strong>Product Launches:</strong></li>
-                <p class="details">Dynamic and engaging photos of product launch events and showcases.</p>
-            </ul>
-        <li><h3>Commercial Photography</h3></li>
-            <ul>
-                <li><strong>Product Photography:</strong> </li>
-                <p class="details">Detailed and appealing photographs of products for catalogs, websites, and advertisements.</p>
-                <li><strong>Advertising Campaigns:</strong> </li>
-                <p class="details">Creative visuals for print and digital advertising campaigns.</p>
-                <li><strong>Brand Storytelling:</strong></li>
-                <p class="details">Photos that tell the story of your brand and its values.</p>
-                <li><strong>Fashion Shoots: </strong></li>
-                <p class="details">High-end fashion photography for lookbooks, magazines, and online stores.</p>
-            </ul>
-        <li><h3>Portrait Photography</h3></li>
-            <ul>
-                <li><strong>Individual Portraits:</strong></li>
-                <p class="details">Artistic and personal portraits that capture the essence of the subject.</p>
-                <li><strong>Family Portraits:</strong> </li>
-                <p class="details">Heartwarming photos of families, capturing special moments and relationships.</p>
-                <li><strong>Senior Portraits:</strong></li>
-                <p class="details">Memorable portraits for high school or college seniors.</p>
-                <li><strong>Maternity and Newborn:</strong> </li>
-                <p class="details">Beautiful and intimate photos of maternity and newborn moments.</p>
-            </ul>
-        <li><h3>Event Photography</h3></li>
-            <ul>
-                <li><strong>Weddings:</strong></li>
-                <p class="details">Comprehensive wedding coverage from engagement sessions to the big day.</p>
-                <li><strong>Parties and Celebrations: </strong> </li>
-                <p class="details">Capturing the joy and excitement of birthday parties, anniversaries, and other celebrations.</p>
-                <li><strong>Cultural and Community Events:</strong></li>
-                <p class="details"> Documenting festivals, parades, and community gatherings.</p>
-            </ul>
-        <li><h3>Post-Production Services</h3></li>
-            <ul>
-                <li><strong>Photo Editing:</strong></li>
-                <p class="details">Professional editing to enhance the quality and impact of photographs.</p>
-                <li><strong>Retouching:</strong> </li>
-                <p class="details">Detailed retouching services to perfect images.</p>
-                <li><strong>Custom Printing: </strong></li>
-                <p class="details"> High-quality prints of photographs for personal or commercial use.</p>
-            </ul>
-    </ol>
-    <h2 id="socials"> Socials </h2>
-        <ul>
-            <li>Twitter</li>
-            <p><a href="https://twitter.com/" target="_blank"> <img src="https://cdn.prod.website-files.com/5d66bdc65e51a0d114d15891/64cebe1d31f50e161e4c825a_X-logo-transparent-white-twitter.png" class="png_a"/></a></p>
-            <li>Instagram</li>
-            <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/ig.png" class="png_a"/></a></p>
-            <li>Facebook</li>
-            <p><a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbw.png" class="png_a"/></a></p>
-        </ul>
-   
-    <h2 id="contact">Contact</h2>
-        <ul>
-            <li><strong>Email:</strong></li>
-            <p> robbielens@photo.com</p>
-            <li><strong>Phone:</strong></li>
-            <p>+123 4 56 78 90 </p>
-            <li><strong>Website:</strong></li>
-            <p><a href="home_page.html" class="link">www.robbielensphotography.com</a></p>
-        </ul>
+        <section class="about_paragraph">
+            <h1> About <em>Robbie Lens</em> </h1>
+            <p>Robbie Lens is a seasoned photographer with over five years of experience in capturing dynamic and pertinent images for a variety of communication projects.<br>
+               Robbie's journey in photography began with a deep-rooted passion for visual storytelling, which evolved into a professional career marked by creativity, dedication, and an unwavering commitment to excellence.
+            </p>
 
-    <div >
-        <a href="" class="port">CHECK OUT MY PORTFOLIO</a>
-    </div>
-    <div class="div_bott">
-        <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
-        <a href="https://www.instagram.com/" target="_blank"> <img src="../images/igb.png" class="png"/></a>
-        <a href="https://twitter.com/" target="_blank"> <img src="https://lh3.googleusercontent.com/proxy/O27nkevdnR3yIvEJ1RD5M_26eiaoW6JuCH3iI1xAKRoExPVdleQyQ1elYXai1QqbMDd5bS4op8l4jdiTxd7ypMiQVb_Ug5qWpGEGrJsg61WtdA1IZuin79WMgjwmf6a9TFSP" class="png"/></a>
-        <a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbb.png" class="png"/></a>
-    </div>
+            <p>From an early age, Robbie was fascinated by the power of images to convey emotions and tell stories. This fascination led to a formal education in photography, where Robbie honed technical skills and artistic vision.<br>
+               Over the years, Robbie has worked on diverse projects ranging from corporate branding campaigns and editorial assignments to personal portrait sessions and documentary work.
+            </p>
+            <p>Robbie's portfolio is a testament to versatility and innovation. Whether it’s capturing the essence of a bustling cityscape, the serene beauty of nature, or the intricate details of a product, Robbie approaches each project with a unique perspective and meticulous attention to detail.<br>
+               This ability to adapt and innovate ensures that every photograph not only meets but exceeds the client's expectations.
+            </p>
+            <p>With a keen eye for creativity and a commitment to quality, Robbie Lens has established a reputation for delivering high-impact visuals that effectively communicate the intended message.<br>
+               Clients appreciate Robbie's collaborative approach, professional integrity, and the seamless way in which complex concepts are translated into compelling images.
+            </p>
+            <p>Robbie continues to push the boundaries of photography, always seeking new techniques and perspectives to enrich the visual narrative. Whether working with multinational corporations, local businesses, or individuals, Robbie Lens remains dedicated to creating images that resonate and inspire.
+            </p>
+        </section>
+
+
+        <section>
+            <h2 id="services"> Services </h2>
+            <ol>
+                <li> <h3>Corporate Photography</h3> </li>
+                    <section class="block">
+                        <ul>
+                            <li><strong>Event Coverage:</strong></li>
+                            <p class="details">Professional coverage of corporate events, conferences, and seminars.</p>
+                            <li><strong>Headshots:</strong></li>
+                            <p class="details">High-quality headshots for company profiles, LinkedIn, and other professional uses.</p>
+                            <li><strong>Office Environment:</strong> </li>
+                            <p class="details">Capturing the essence of your workplace and team in action.</p>
+                            <li><strong>Product Launches:</strong></li>
+                            <p class="details">Dynamic and engaging photos of product launch events and showcases.</p>
+                        </ul>
+                    </section>
+                   
+                <li><h3>Commercial Photography</h3></li>
+                    <section class="block">
+                        <ul>
+                            <li><strong>Product Photography:</strong> </li>
+                            <p class="details">Detailed and appealing photographs of products for catalogs, websites, and advertisements.</p>
+                            <li><strong>Advertising Campaigns:</strong> </li>
+                            <p class="details">Creative visuals for print and digital advertising campaigns.</p>
+                            <li><strong>Brand Storytelling:</strong></li>
+                            <p class="details">Photos that tell the story of your brand and its values.</p>
+                            <li><strong>Fashion Shoots: </strong></li>
+                            <p class="details">High-end fashion photography for lookbooks, magazines, and online stores.</p>
+                        </ul>
+                    </section>
+
+                <li><h3>Portrait Photography</h3></li>
+                    <section class="block">
+                        <ul>
+                            <li><strong>Individual Portraits:</strong></li>
+                            <p class="details">Artistic and personal portraits that capture the essence of the subject.</p>
+                            <li><strong>Family Portraits:</strong> </li>
+                            <p class="details">Heartwarming photos of families, capturing special moments and relationships.</p>
+                            <li><strong>Senior Portraits:</strong></li>
+                            <p class="details">Memorable portraits for high school or college seniors.</p>
+                            <li><strong>Maternity and Newborn:</strong> </li>
+                            <p class="details">Beautiful and intimate photos of maternity and newborn moments.</p>
+                        </ul>
+                    </section>
+
+                <li><h3>Event Photography</h3></li>
+                    <section class="block">
+                        <ul>
+                            <li><strong>Weddings:</strong></li>
+                            <p class="details">Comprehensive wedding coverage from engagement sessions to the big day.</p>
+                            <li><strong>Parties and Celebrations: </strong> </li>
+                            <p class="details">Capturing the joy and excitement of birthday parties, anniversaries, and other celebrations.</p>
+                            <li><strong>Cultural and Community Events:</strong></li>
+                            <p class="details"> Documenting festivals, parades, and community gatherings.</p>
+                        </ul>
+                    </section>
+
+                <li><h3>Post-Production Services</h3></li>
+                    <section class="block">
+                        <ul>
+                            <li><strong>Photo Editing:</strong></li>
+                            <p class="details">Professional editing to enhance the quality and impact of photographs.</p>
+                            <li><strong>Retouching:</strong> </li>
+                            <p class="details">Detailed retouching services to perfect images.</p>
+                            <li><strong>Custom Printing: </strong></li>
+                            <p class="details"> High-quality prints of photographs for personal or commercial use.</p>
+                        </ul>
+                    </section>
+            </ol>
+        </section>
+
+        <section>
+            <h2 id="socials"> Socials </h2>
+                <ul>
+                    <li>Twitter</li>
+                    <p><a href="https://twitter.com/" target="_blank"> <img src="https://cdn.prod.website-files.com/5d66bdc65e51a0d114d15891/64cebe1d31f50e161e4c825a_X-logo-transparent-white-twitter.png" class="png_a"/></a></p>
+                    <li>Instagram</li>
+                    <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/ig.png" class="png_a"/></a></p>
+                    <li>Facebook</li>
+                    <p><a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbw.png" class="png_a"/></a></p>
+                </ul>
+        </section>
+        
+        <section>
+            <h2 id="contact">Contact</h2>
+                <ul>
+                    <li><strong>Email:</strong></li>
+                    <p> robbielens@photo.com</p>
+                    <li><strong>Phone:</strong></li>
+                    <p>+123 4 56 78 90 </p>
+                    <li><strong>Website:</strong></li>
+                    <p><a href="home_page.html" class="link">www.robbielensphotography.com</a></p>
+                </ul>
+        </section>
+
+    </main>
+
+    <footer>
+        <div >
+            <a href="" class="port">A PROJECT? DM ME</a>
+        </div>
+        <div class="div_bott">
+            <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
+            <a href="https://www.instagram.com/" target="_blank"> <img src="../images/igb.png" class="png"/></a>
+            <a href="https://twitter.com/" target="_blank"> <img src="https://lh3.googleusercontent.com/proxy/O27nkevdnR3yIvEJ1RD5M_26eiaoW6JuCH3iI1xAKRoExPVdleQyQ1elYXai1QqbMDd5bS4op8l4jdiTxd7ypMiQVb_Ug5qWpGEGrJsg61WtdA1IZuin79WMgjwmf6a9TFSP" class="png"/></a>
+            <a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbb.png" class="png"/></a>
+        </div>
+    </footer>
    
 </body>
 
