--- a/test/home_page.html
+++ b/test/home_page.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <title> Home - Rbbie Lens Photography </title>
         <link href="style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
     </head>
+    
     <body>
         <!-- we re gonna figure out what to put in the homepage body of the website -->
 
         <header>
-            <div class="div_top">
+            <div class="top_bar">
                 <a href="home_page.html"><img src="../images/logo.png" alt="logo" id="logo"/></a><a href="about.html">About</a>
             </div>
         </header>
 
         <section class="home">
 
+            <img src="../images/robbie_lens.png" alt="picture of robbie lens" class="robbie_picture"/>
 
-            <br>
-            <img src="../images/robbie_lens.png" alt="picture of robbie lens" class="RL"/>
             <section class="description">
-                <div class="up">
                     <h1>Photography</h1>
                     <p>Here is where <em>Passion</em> meets <em>Profession</em>!</p>
-                </div>
                 <p>
                     Robbie Lens is a seasoned photographer with over five years of experience, known for capturing dynamic and impactful images across various communication projects.<br>
                     With a keen eye for creativity and a dedication to quality, Robbie consistently delivers visuals that exceed client expectations and effectively convey compelling stories.
@@ -61,7 +61,7 @@
 
         <footer>
 
-            <div class="div_bott">
+            <div class="bott_bar">
                 <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
                 <a href="https://www.instagram.com/" target="_blank"> <img src="../images/igb.png" class="png"/></a>
                 <a href="https://twitter.com/" target="_blank"> <img src="https://lh3.googleusercontent.com/proxy/O27nkevdnR3yIvEJ1RD5M_26eiaoW6JuCH3iI1xAKRoExPVdleQyQ1elYXai1QqbMDd5bS4op8l4jdiTxd7ypMiQVb_Ug5qWpGEGrJsg61WtdA1IZuin79WMgjwmf6a9TFSP" class="png"/></a>
