--- a/test/about.html
+++ b/test/about.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Contenu de la page -->
     <header>
-        <div class="div_top">
+        <div class="top_bar">
             <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/></a><a href="home_page.html"> Home </a>
         </div>
     </header>  
@@ -37,9 +37,8 @@
             </p>
         </section>
 
-
         <section>
-            <h2 id="services"> Services </h2>
+            <h2> Services </h2>
             <ol>
                 <li> <h3>Corporate Photography</h3> </li>
                     <section class="block">
@@ -110,19 +109,19 @@
         </section>
 
         <section>
-            <h2 id="socials"> Socials </h2>
+            <h2> Socials </h2>
                 <ul>
                     <li>Twitter</li>
-                    <p><a href="https://twitter.com/" target="_blank"> <img src="https://cdn.prod.website-files.com/5d66bdc65e51a0d114d15891/64cebe1d31f50e161e4c825a_X-logo-transparent-white-twitter.png" class="png_a"/></a></p>
+                    <p><a href="https://twitter.com/" target="_blank"> <img src="https://cdn.prod.website-files.com/5d66bdc65e51a0d114d15891/64cebe1d31f50e161e4c825a_X-logo-transparent-white-twitter.png" class="about_png"/></a></p>
                     <li>Instagram</li>
-                    <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/ig.png" class="png_a"/></a></p>
+                    <p><a href="https://www.instagram.com/" target="_blank"> <img src="../images/ig.png" class="about_png"/></a></p>
                     <li>Facebook</li>
-                    <p><a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbw.png" class="png_a"/></a></p>
+                    <p><a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbw.png" class="about_png"/></a></p>
                 </ul>
         </section>
         
         <section>
-            <h2 id="contact">Contact</h2>
+            <h2>Contact</h2>
                 <ul>
                     <li><strong>Email:</strong></li>
                     <p> robbielens@photo.com</p>
@@ -139,7 +138,7 @@
         <div >
             <a href="" class="port">A PROJECT? DM ME</a>
         </div>
-        <div class="div_bott">
+        <div class="bott_bar">
             <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
             <a href="https://www.instagram.com/" target="_blank"> <img src="../images/igb.png" class="png"/></a>
             <a href="https://twitter.com/" target="_blank"> <img src="https://lh3.googleusercontent.com/proxy/O27nkevdnR3yIvEJ1RD5M_26eiaoW6JuCH3iI1xAKRoExPVdleQyQ1elYXai1QqbMDd5bS4op8l4jdiTxd7ypMiQVb_Ug5qWpGEGrJsg61WtdA1IZuin79WMgjwmf6a9TFSP" class="png"/></a>
